--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
-    background-color: lavender;
     font-family: Arial, sans-serif;
-    text-align: center;
     margin: 0;
     padding: 0;
+    background-image: url('images/Cover.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
 }
 
 .tree {
