--- a/style.css
+++ b/style.css
@@ -5,28 +5,39 @@ body {
     background-image: url('images/Cover.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-.tree {
-    position: relative;
-    width: 200px;
-    height: 300px;
-    margin: 50px auto;
+.header {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
 }
 
-.trunk {
-    background-color: saddlebrown;
-    position: absolute;
-    width: 50px;
+.profile-photo {
+    width: 100px;
     height: 100px;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 10px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+.tree {
+    background-image: url('images/Main-Tree.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 1300px;
+    height: 840px;
+    position: static;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.branch {
+.nest {
     background-color: #4CAF50;
     color: white;
     position: absolute;
@@ -35,12 +46,12 @@ body {
     cursor: pointer;
     transition: transform 0.3s;
 }
-.branch:hover {
+.nest:hover {
     transform: scale(1.1);
 }
-.branch1 { top: 40px; left: -80px; }
-.branch2 { top: 20px; left: 22%; }
-.branch3 { top: 40px; right: -80px; }
+.nest1 { top: 40px; left: -80px; }
+.nest2 { top: 20px; left: 22%; }
+.nest3 { top: 40px; right: -80px; }
 
 .section {
     display: none;
