--- a/style.css
+++ b/style.css
@@ -12,10 +12,15 @@ body {
     height: 100vh;
 }
 
+/*Photo and Name*/
 .header {
     display: flex;
     align-items: center;
     margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+    position: absolute;
+    top: 0;
 }
 
 .profile-photo {
@@ -24,17 +29,26 @@ body {
     border-radius: 50%;
     margin-right: 20px;
 }
-.tree {
+
+/*The Tree*/
+.tree-container {
     background-image: url('images/Main-Tree.png');
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center;
-    width: 1300px;
-    height: 840px;
-    position: static;
+    background-position: bottom center;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.tree {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .nest {
@@ -53,6 +67,7 @@ body {
 .nest2 { top: 20px; left: 22%; }
 .nest3 { top: 40px; right: -80px; }
 
+/*Sections*/
 .section {
     display: none;
     background: white;
