--- a/style.css
+++ b/style.css
@@ -1,7 +1,37 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
+* {
+    border: 0;
     padding: 0;
+    margin: 0;
+}
+
+/*NAV BAR*/
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    margin: 0px;
+    top: 0;
+    width: vw;
+}
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+}
+  
+/*HOME*/
+#home {
     background-image: url('images/Cover.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -9,25 +39,30 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    width: vw;
+    height: fit-content;
 }
-
 /*Photo and Name*/
 .header {
     display: flex;
     align-items: center;
     margin-top: 20px;
-    width: 100%;
+    margin-bottom: 30px;
+    width: 50%;
     justify-content: center;
     position: absolute;
     top: 0;
+    border: solid 5px;
 }
-
 .profile-photo {
     width: 100px;
     height: 100px;
+    border: solid 5px rgba(10, 10, 68, 0.516);
     border-radius: 50%;
-    margin-right: 20px;
+    margin-right: 300px;
+}
+.my-name {
+    font-family: sans-serif;
 }
 
 /*The Tree*/
@@ -35,20 +70,14 @@ body {
     background-image: url('images/Main-Tree.png');
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: bottom center;
+    background-position: center;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.tree {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+    margin-top: 200px;
+    border: solid 5px;
 }
 
 .nest {
