--- a/style.css
+++ b/style.css
@@ -13,13 +13,14 @@ body {
 
 /*NAV BAR*/
 .topnav {
-    background-image: url(images/Sunset.jpg);
+    background-image: url('images/Sunset.jpg');
     background-size: cover;
-    background-position: left center;
+    background-repeat: no-repeat;
+    background-position: center 98%;
     overflow: hidden;
     position: fixed;
     width: 100vw;
-    border: solid 5px;
+    border: solid 5px #1d2f242e;
     z-index: 1000;
 }
 .topnav a {
@@ -37,12 +38,16 @@ body {
   
 /*HOME*/
 #home {
+    background-image: url(images/Sunset.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     padding-top: 70px;
     display: grid;
     place-items: center;
     align-content: center;
     width: 100vw;
-    min-height: 100vht;
+    min-height: 100vh;
     border: solid 5px;
 }
 /*Photo and Name*/
@@ -56,13 +61,17 @@ body {
     position: relative;
 }
 .profile-photo {
-    width: 200px;
-    height: 200px;
-    border: solid 5px rgba(5, 96, 51, 0.388);
+    width: 150px;
+    height: 150px;
+    border: solid 5px rgba(194, 236, 194, 0.483);
     border-radius: 50%;
 }
 .my-name {
-    font-family: 'Raleway';
+    font-family: "Candal", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 40px;
+    color: rgba(194, 236, 194, 0.873);
 }
 
 /*Sections*/
