--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     border: 0;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -105,15 +106,20 @@ span {
     color: #08610b;
 }
 
-/*Sections*/
+/*SECTIONS*/
 .section {
-    display: block;
-    background: rgba(152, 251, 152, 0.515);
-    text-align: left;
-    width: 80%;
-    max-width: 400px;
-    margin: 100px auto;
-    padding: 15px;
-    border: 2px solid #4CAF50;
-    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+}
+.section h1 {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.content-box {
+    width: 100%;
+    padding: 20px;
+    border: 1px solid #246927cd;
 }
