--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
     align-content: center;
     width: 100vw;
     min-height: 100vh;
-    border: solid 5px;
+    border: solid 5px rgba(166, 221, 239, 0.534);
 }
 /*Photo and Name*/
 .header {
@@ -115,11 +115,24 @@ span {
 
 }
 .section h1 {
+    background-image: url(images/field-sunset.jpg);
+    background-position: center 30%;
+    padding: 0 80px 0 80px;
     margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
+    font-family: "EB Garamond", serif;
+    font-optical-sizing: auto;
+    font-weight: 300px;
+    font-style: bold;
+    border: solid 5px;
+    border-radius: 20px;
 }
 .content-box {
     width: 100%;
     padding: 20px;
-    border: 1px solid #246927cd;
+    border: 1px solid #0c130dcd;
+}
+.content-box:first-of-type {
+    border-top: 0;
+
 }
