--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
     align-content: center;
     width: 100vw;
     min-height: 100vh;
-    border: solid 5px rgba(166, 221, 239, 0.534);
+    border-bottom: solid 5px rgba(14, 23, 26, 0.781);
 }
 /*Photo and Name*/
 .header {
@@ -120,7 +120,7 @@ span {
     padding: 0 80px 0 80px;
     margin-top: 10px;
     margin-bottom: 0px;
-    font-family: "EB Garamond", serif;
+    font-family: "Darumadrop One", serif;
     font-optical-sizing: auto;
     font-weight: 300px;
     font-style: bold;
@@ -134,5 +134,22 @@ span {
 }
 .content-box:first-of-type {
     border-top: 0;
+}
 
+.content-box h2 {
+    font-family: "Darumadrop One", serif;
+    font-size: 50px;
+    font-weight: lighter;
+    font-style: normal;
+}
+.content-box *:not(h2) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(201, 253, 201);
+    height: 500px;
+}
+
+#contacts {
+    display: flex;
 }
