--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: rgb(93, 135, 93);
     overflow-x: hidden;
@@ -112,6 +116,7 @@ span {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin: 20px;
 
 }
 .section h1 {
@@ -129,11 +134,6 @@ span {
 }
 .content-box {
     width: 100%;
-    padding: 20px;
-    border: 1px solid #0c130dcd;
-}
-.content-box:first-of-type {
-    border-top: 0;
 }
 
 .content-box h2 {
@@ -147,7 +147,7 @@ span {
     justify-content: center;
     align-items: center;
     background-color: rgb(201, 253, 201);
-    height: 500px;
+    height: 300px;
 }
 
 #contacts {
