--- a/style.css
+++ b/style.css
@@ -150,6 +150,27 @@ span {
     height: 300px;
 }
 
-#contacts .content-box {
+.contacts-grid {
+    margin-top: 30px;
     display: grid;
+    width: 80%;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px; 
+}
+.contact-item {
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    font-family: "Monomaniac One", serif;
+    font-size: 20px;
+    font-weight: lighter;
+    font-style: normal;
+}
+#contacts img {
+    background-color: rgb(93, 135, 93);
+    height: 100px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 5px;
 }
