--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 16px;
     font-family: "Cantata One", serif;
     font-weight: 600;
     font-style: normal;
@@ -142,12 +142,11 @@ body {
     font-weight: lighter;
     font-style: normal;
 }
-.content-box *:not(h2) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.content-box p {
     background-color: rgb(201, 253, 201);
-    height: 300px;
+    padding: 20px;
+    margin: 10px 0; 
 }
 
 /*Contacts*/
@@ -205,4 +204,32 @@ body {
     border-radius: 30px;
 }
 
+/*Skills*/
+.skills-grid {
+    display: flex;
+    justify-content: space-between; 
+    gap: 1px; 
+    border: solid 5px;
+    background-color: rgb(201, 253, 201);
+    border: solid 5px rgba(107, 198, 82, 0.537);
+}
+.skill-column {
+    border: solid 1px;
+    flex: 1; 
+}
 
+.skill-column h3 {
+    font-family: "Monomaniac One", serif;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.skill-column ul {
+    list-style-type: none; 
+    padding: 0;
+}
+.skill-column li {
+    font-family: "Monomaniac One", serif;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
