--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ body {
     height: 150px;
     width: 100vw;
 }
+.d1 {
+    background-position: center 10%;
+}
+.d2 {
+    background-position: center 95%;
+}
 
 /*NAV BAR*/
 .topnav {
@@ -47,7 +53,7 @@ body {
     text-decoration: none;
     font-size: 28px;
     font-family: "Monomaniac One", serif;
-    font-weight: 600;
+    font-weight: 550;
     font-style: normal;
     border-right: 2px solid #000000;
 }
@@ -194,7 +200,7 @@ body {
 
 #bio p {
     font-family: "Diphylleia", serif;
-    font-weight: 700;
+    font-weight: 800;
     font-style: normal;
     font-size: 20px;
 }
@@ -244,8 +250,8 @@ body {
 /*Education*/
 .education-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Create a single column layout */
-    gap: 20px; /* Add space between items */
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 20px; 
 }
 .education-item {
     display: flex;
@@ -278,8 +284,8 @@ body {
 /*Project*/
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Create 3 equal columns */
-    gap: 20px; /* Add space between items */
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
 }
 .project-item {
     display: flex;
@@ -310,4 +316,59 @@ body {
     font-family: "Monomaniac One", serif;
     font-size: 18px;
     margin-bottom: 5px;
+}
+
+/*Volunteer*/
+.volunteer-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 20px; 
+}
+.volunteer-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    border: solid 1px rgba(107, 198, 82, 0.537);
+    border-radius: 10px;
+    background-color: rgb(201, 253, 201);
+}
+.volunteer-item img {
+    width: 120px;
+    height: 120px;
+    margin-bottom: 10px;
+}
+.volunteer-item h3 {
+    font-family: "Monomaniac One", serif;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    text-align: center;
+}
+.volunteer-item p {
+    font-family: "Monomaniac One", serif;
+    font-size: 18px;
+    margin: 0;
+    text-align: center;
+}
+.volunteer-item ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    text-align: left;
+}
+.volunteer-item li {
+    font-family: "Monomaniac One", serif;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+/*Resume*/
+#resume img {
+    padding: 20px;
+    width: 200px;
+    height: 200px;
+}
+
+#resume a:hover img {
+    border: solid 5px rgb(56, 121, 56);
 }
