--- a/style.css
+++ b/style.css
@@ -37,24 +37,26 @@ body {
     background-position: center 18%;
     overflow: hidden;
     position: fixed;
-    height: 10vh;
+    height: 8vh;
     width: 100vw;
-    border: solid 2px #000000d8;
+    border-bottom: solid 5px #001709f6;
     z-index: 1000;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .topnav a {
-    float: left;
+    display: flex;
+    align-items: center;
     color: #000000;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0 16px;
     text-decoration: none;
     font-size: 28px;
     font-family: "Monomaniac One", serif;
     font-weight: 550;
     font-style: normal;
+    height: 100%;
     border-right: 2px solid #000000;
 }
 .topnav a:first-child {
@@ -98,10 +100,10 @@ body {
 }
 .my-name {
     font-family: "Kumar One", serif;
-    font-weight: 400;
+    font-weight: 300;
     font-style: normal;
     font-size: 60px;
-    color: rgba(7, 43, 25, 0.758);
+    color: rgba(9, 62, 35, 0.879);
 }
 /*Overview*/
 .overview {
